--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/port-channel-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/port-channel-interfaces.j2
@@ -15,38 +15,52 @@
 | Interface | Description | Type | Mode | VLANs | Native VLAN | Trunk Group | LACP Fallback Timeout | LACP Fallback Mode | MLAG ID | EVPN ESI |
 | --------- | ----------- | ---- | ---- | ----- | ----------- | ------------| --------------------- | ------------------ | ------- | -------- |
 {%     for port_channel_interface in port_channel_interfaces | arista.avd.natural_sort('name') %}
-{%         if port_channel_interface.type is arista.avd.defined("switched") %}
+{%         if (port_channel_interface.switchport.mode is arista.avd.defined or
+            port_channel_interface.switchport.access_vlan is arista.avd.defined or
+            port_channel_interface.switchport.trunk.allowed_vlan is arista.avd.defined or
+            port_channel_interface.switchport.trunk.native_vlan_tag is arista.avd.defined(true) or
+            port_channel_interface.switchport.trunk.native_vlan is arista.avd.defined or
+            port_channel_interface.switchport.trunk.groups is arista.avd.defined) and
+            port_channel_interface.type is not arista.avd.defined %}
 {%             set description = port_channel_interface.description | arista.avd.default("-") %}
-{%             set type = port_channel_interface.type %}
-{%             set mode = port_channel_interface.switchport.mode | arista.avd.default(port_channel_interface.mode, '-') %}
-{%             if port_channel_interface.switchport.access_vlan is arista.avd.defined or
-                port_channel_interface.switchport.trunk.allowed_vlan is arista.avd.defined %}
-{%                 set vlans = [] %}
-{%                 if port_channel_interface.switchport.access_vlan is arista.avd.defined %}
-{%                     do vlans.append(port_channel_interface.switchport.access_vlan) %}
-{%                 endif %}
-{%                 if port_channel_interface.switchport.trunk.allowed_vlan is arista.avd.defined %}
-{%                     set allowed_vlans = port_channel_interface.switchport.trunk.allowed_vlan | string | arista.avd.range_expand %}
-{%                     for allowed_vlan in allowed_vlans %}
-{%                         do vlans.append(allowed_vlan | int) %}
-{%                     endfor %}
-{%                 endif %}
-{%                 set vlans = vlans | arista.avd.list_compress %}
-{%             else %}
-{%                 set vlans = port_channel_interface.vlans | arista.avd.default('-') %}
+{%             set mode = port_channel_interface.switchport.mode | arista.avd.default('-') %}
+{%             set vlans = [] %}
+{%             if port_channel_interface.switchport.access_vlan is arista.avd.defined %}
+{%                 do vlans.append(port_channel_interface.switchport.access_vlan) %}
 {%             endif %}
-{%             if  port_channel_interface.native_vlan_tag is arista.avd.defined(true) or
-                port_channel_interface.switchport.trunk.native_vlan_tag is arista.avd.defined(true) %}
+{%             if port_channel_interface.switchport.trunk.allowed_vlan is arista.avd.defined %}
+{%                 set allowed_vlans = port_channel_interface.switchport.trunk.allowed_vlan | string | arista.avd.range_expand %}
+{%                 for allowed_vlan in allowed_vlans %}
+{%                     do vlans.append(allowed_vlan | int) %}
+{%                 endfor %}
+{%             endif %}
+{%             set vlans = vlans | arista.avd.list_compress %}
+{%             if port_channel_interface.switchport.trunk.native_vlan_tag is arista.avd.defined(true) %}
 {%                 set native_vlan = "tag" %}
 {%             else %}
-{%                 set native_vlan = port_channel_interface.switchport.trunk.native_vlan | arista.avd.default(port_channel_interface.native_vlan, '-') %}
+{%                 set native_vlan = port_channel_interface.switchport.trunk.native_vlan | arista.avd.default('-') %}
 {%             endif %}
-{%             set trunk_groups = port_channel_interface.switchport.trunk.groups | arista.avd.default(port_channel_interface.trunk_groups, '-') %}
+{%             set trunk_groups = port_channel_interface.switchport.trunk.groups | arista.avd.default('-') %}
 {%             set lacp_fallback_timeout = port_channel_interface.lacp_fallback_timeout | arista.avd.default("-") %}
 {%             set lacp_fallback_mode = port_channel_interface.lacp_fallback_mode | arista.avd.default("-") %}
 {%             set mlag = port_channel_interface.mlag | arista.avd.default("-") %}
 {%             set esi = port_channel_interface.evpn_ethernet_segment.identifier | arista.avd.default(port_channel_interface.esi, "-") %}
-| {{ port_channel_interface.name }} | {{ description }} | {{ type }} | {{ mode }} | {{ vlans }} | {{ native_vlan }} | {{ trunk_groups }} | {{ lacp_fallback_timeout }} | {{ lacp_fallback_mode }} | {{ mlag }} | {{ esi }} |
+| {{ port_channel_interface.name }} | {{ description }} | {{ port_channel_interface.type | arista.avd.default("-") }} | {{ mode }} | {{ vlans }} | {{ native_vlan }} | {{ trunk_groups }} | {{ lacp_fallback_timeout }} | {{ lacp_fallback_mode }} | {{ mlag }} | {{ esi }} |
+{%         elif port_channel_interface.type is arista.avd.defined("switched") %}
+{%             set description = port_channel_interface.description | arista.avd.default("-") %}
+{%             set mode = port_channel_interface.mode | arista.avd.default('-') %}
+{%             set vlans = port_channel_interface.vlans | arista.avd.default('-') %}
+{%             if  port_channel_interface.native_vlan_tag is arista.avd.defined(true) %}
+{%                 set native_vlan = "tag" %}
+{%             else %}
+{%                 set native_vlan = port_channel_interface.native_vlan | arista.avd.default('-') %}
+{%             endif %}
+{%             set trunk_groups = port_channel_interface.trunk_groups | arista.avd.default('-') %}
+{%             set lacp_fallback_timeout = port_channel_interface.lacp_fallback_timeout | arista.avd.default("-") %}
+{%             set lacp_fallback_mode = port_channel_interface.lacp_fallback_mode | arista.avd.default("-") %}
+{%             set mlag = port_channel_interface.mlag | arista.avd.default("-") %}
+{%             set esi = port_channel_interface.evpn_ethernet_segment.identifier | arista.avd.default(port_channel_interface.esi, "-") %}
+| {{ port_channel_interface.name }} | {{ description }} | {{ port_channel_interface.type | arista.avd.default("-") }} | {{ mode }} | {{ vlans }} | {{ native_vlan }} | {{ trunk_groups }} | {{ lacp_fallback_timeout }} | {{ lacp_fallback_mode }} | {{ mlag }} | {{ esi }} |
 {%         endif %}
 {%     endfor %}
 {# Encapsulation #}
