Feat(eos_cli_config_gen): Add support for isis authentication on vlan interfaces (#4254)

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/vlan-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/vlan-interfaces.j2
@@ -306,6 +306,112 @@ interface {{ vlan_interface.name }}
 {%     if vlan_interface.isis_network_point_to_point is arista.avd.defined(true) %}
    isis network point-to-point
 {%     endif %}
+{%     if vlan_interface.isis_authentication.both.mode is arista.avd.defined
+          and (vlan_interface.isis_authentication.both.mode in ["md5", "text"]
+               or (vlan_interface.isis_authentication.both.mode == "sha" and vlan_interface.isis_authentication.both.sha.key_id is arista.avd.defined)
+               or (vlan_interface.isis_authentication.both.mode == "shared-secret"
+                   and vlan_interface.isis_authentication.both.shared_secret.profile is arista.avd.defined
+                   and vlan_interface.isis_authentication.both.shared_secret.algorithm is arista.avd.defined)) %}
+{%         set isis_auth_cli = "isis authentication mode " ~ vlan_interface.isis_authentication.both.mode %}
+{%         if vlan_interface.isis_authentication.both.mode == "sha" %}
+{%             set isis_auth_cli = isis_auth_cli ~ " key-id " ~ vlan_interface.isis_authentication.both.sha.key_id %}
+{%         elif vlan_interface.isis_authentication.both.mode == "shared-secret" %}
+{%             set isis_auth_cli = isis_auth_cli ~ " profile " ~ vlan_interface.isis_authentication.both.shared_secret.profile ~ " algorithm " ~ vlan_interface.isis_authentication.both.shared_secret.algorithm %}
+{%         endif %}
+{%         if vlan_interface.isis_authentication.both.rx_disabled is arista.avd.defined(true) %}
+{%             set isis_auth_cli = isis_auth_cli ~ " rx-disabled" %}
+{%         endif %}
+   {{ isis_auth_cli }}
+{%     else %}
+{%         if vlan_interface.isis_authentication.level_1.mode is arista.avd.defined
+               and (vlan_interface.isis_authentication.level_1.mode in ["md5", "text"]
+               or (vlan_interface.isis_authentication.level_1.mode == "sha" and vlan_interface.isis_authentication.level_1.sha.key_id is arista.avd.defined)
+               or (vlan_interface.isis_authentication.level_1.mode == "shared-secret"
+                   and vlan_interface.isis_authentication.level_1.shared_secret.profile is arista.avd.defined
+                   and vlan_interface.isis_authentication.level_1.shared_secret.algorithm is arista.avd.defined)) %}
+{%             set isis_auth_cli = "isis authentication mode " ~ vlan_interface.isis_authentication.level_1.mode %}
+{%             if vlan_interface.isis_authentication.level_1.mode == "sha" %}
+{%                 set isis_auth_cli = isis_auth_cli ~ " key-id " ~ vlan_interface.isis_authentication.level_1.sha.key_id %}
+{%             elif vlan_interface.isis_authentication.level_1.mode == "shared-secret" %}
+{%                 set isis_auth_cli = isis_auth_cli ~ " profile " ~ vlan_interface.isis_authentication.level_1.shared_secret.profile ~ " algorithm " ~ vlan_interface.isis_authentication.level_1.shared_secret.algorithm %}
+{%             endif %}
+{%             if vlan_interface.isis_authentication.level_1.rx_disabled is arista.avd.defined(true) %}
+{%                 set isis_auth_cli = isis_auth_cli ~ " rx-disabled" %}
+{%             endif %}
+   {{ isis_auth_cli }} level-1
+{%         endif %}
+{%         if vlan_interface.isis_authentication.level_2.mode is arista.avd.defined
+               and (vlan_interface.isis_authentication.level_2.mode in ["md5", "text"]
+               or (vlan_interface.isis_authentication.level_2.mode == "sha" and vlan_interface.isis_authentication.level_2.sha.key_id is arista.avd.defined)
+               or (vlan_interface.isis_authentication.level_2.mode == "shared-secret"
+                   and vlan_interface.isis_authentication.level_2.shared_secret.profile is arista.avd.defined
+                   and vlan_interface.isis_authentication.level_2.shared_secret.algorithm is arista.avd.defined)) %}
+{%             set isis_auth_cli = "isis authentication mode " ~ vlan_interface.isis_authentication.level_2.mode %}
+{%             if vlan_interface.isis_authentication.level_2.mode == "sha" %}
+{%                 set isis_auth_cli = isis_auth_cli ~ " key-id " ~ vlan_interface.isis_authentication.level_2.sha.key_id %}
+{%             elif vlan_interface.isis_authentication.level_2.mode == "shared-secret" %}
+{%                 set isis_auth_cli = isis_auth_cli ~ " profile " ~ vlan_interface.isis_authentication.level_2.shared_secret.profile ~ " algorithm " ~ vlan_interface.isis_authentication.level_2.shared_secret.algorithm %}
+{%             endif %}
+{%             if vlan_interface.isis_authentication.level_2.rx_disabled is arista.avd.defined(true) %}
+{%                 set isis_auth_cli = isis_auth_cli ~ " rx-disabled" %}
+{%             endif %}
+   {{ isis_auth_cli }} level-2
+{%         endif %}
+{%     endif %}
+{%     if vlan_interface.isis_authentication is arista.avd.defined %}
+{%         set both_key_ids = [] %}
+{%         if vlan_interface.isis_authentication.both.key_ids is arista.avd.defined %}
+{%             for auth_key in vlan_interface.isis_authentication.both.key_ids | arista.avd.natural_sort("id") %}
+{%                 if auth_key.id is arista.avd.defined
+                       and auth_key.algorithm is arista.avd.defined
+                       and auth_key.key_type is arista.avd.defined
+                       and auth_key.key is arista.avd.defined %}
+{%                     do both_key_ids.append(auth_key.id) %}
+{%                     if auth_key.rfc_5310 is arista.avd.defined(true) %}
+   isis authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} rfc-5310 key {{ auth_key.key_type }} {{ auth_key.key }}
+{%                     else %}
+   isis authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} key {{ auth_key.key_type }} {{ auth_key.key }}
+{%                     endif %}
+{%                 endif %}
+{%             endfor %}
+{%         endif %}
+{%         for auth_key in vlan_interface.isis_authentication.level_1.key_ids | arista.avd.natural_sort("id") %}
+{%             if auth_key.id is arista.avd.defined
+                  and auth_key.id not in both_key_ids
+                  and auth_key.algorithm is arista.avd.defined
+                  and auth_key.key_type is arista.avd.defined
+                  and auth_key.key is arista.avd.defined %}
+{%                 if auth_key.rfc_5310 is arista.avd.defined(true) %}
+   isis authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} rfc-5310 key {{ auth_key.key_type }} {{ auth_key.key }} level-1
+{%                 else %}
+   isis authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} key {{ auth_key.key_type }} {{ auth_key.key }} level-1
+{%                 endif %}
+{%             endif %}
+{%         endfor %}
+{%         for auth_key in vlan_interface.isis_authentication.level_2.key_ids | arista.avd.natural_sort("id") %}
+{%             if auth_key.id is arista.avd.defined
+                  and auth_key.id not in both_key_ids
+                  and auth_key.algorithm is arista.avd.defined
+                  and auth_key.key_type is arista.avd.defined
+                  and auth_key.key is arista.avd.defined %}
+{%                 if auth_key.rfc_5310 is arista.avd.defined(true) %}
+   isis authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} rfc-5310 key {{ auth_key.key_type }} {{ auth_key.key }} level-2
+{%                 else %}
+   isis authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} key {{ auth_key.key_type }} {{ auth_key.key }} level-2
+{%                 endif %}
+{%             endif %}
+{%         endfor %}
+{%         if vlan_interface.isis_authentication.both.key_type is arista.avd.defined and vlan_interface.isis_authentication.both.key is arista.avd.defined %}
+   isis authentication key {{ vlan_interface.isis_authentication.both.key_type }} {{ vlan_interface.isis_authentication.both.key }}
+{%         else %}
+{%             if vlan_interface.isis_authentication.level_1.key_type is arista.avd.defined and vlan_interface.isis_authentication.level_1.key is arista.avd.defined %}
+   isis authentication key {{ vlan_interface.isis_authentication.level_1.key_type }} {{ vlan_interface.isis_authentication.level_1.key }} level-1
+{%             endif %}
+{%             if vlan_interface.isis_authentication.level_2.key_type is arista.avd.defined and vlan_interface.isis_authentication.level_2.key is arista.avd.defined %}
+   isis authentication key {{ vlan_interface.isis_authentication.level_2.key_type }} {{ vlan_interface.isis_authentication.level_2.key }} level-2
+{%             endif %}
+{%         endif %}
+{%     endif %}
 {%     if vlan_interface.vrrp_ids is arista.avd.defined %}
 {%         for vrid in vlan_interface.vrrp_ids | arista.avd.natural_sort('id') if vrid.id is arista.avd.defined %}
 {%             if vrid.priority_level is arista.avd.defined %}
