--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/port-channel-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/port-channel-interfaces.j2
@@ -15,6 +15,8 @@
 | Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | LACP Fallback Timeout | LACP Fallback Mode | MLAG ID | EVPN ESI |
 | --------- | ----------- | ---- | ----- | ----------- | ------------| --------------------- | ------------------ | ------- | -------- |
 {%     for port_channel_interface in port_channel_interfaces | arista.avd.natural_sort('name') %}
+{#  Below if condition is added to keep the existing support for rendering switchport attributes on the basis of port_channel_interface.type == switched #}
+{#  TODO: AVD6.0 this if condition should be removed once the port_channel_interface.type key is removed in AVD6.0 #}
 {%         if (port_channel_interface.switchport.mode is arista.avd.defined or
             port_channel_interface.switchport.access_vlan is arista.avd.defined or
             port_channel_interface.switchport.trunk.allowed_vlan is arista.avd.defined or
@@ -29,10 +31,7 @@
 {%                 do vlans.append(port_channel_interface.switchport.access_vlan) %}
 {%             endif %}
 {%             if port_channel_interface.switchport.trunk.allowed_vlan is arista.avd.defined %}
-{%                 set allowed_vlans = port_channel_interface.switchport.trunk.allowed_vlan | string | arista.avd.range_expand %}
-{%                 for allowed_vlan in allowed_vlans %}
-{%                     do vlans.append(allowed_vlan | int) %}
-{%                 endfor %}
+{%                 do vlans.extend(port_channel_interface.switchport.trunk.allowed_vlan | arista.avd.range_expand | map('int')) %}
 {%             endif %}
 {%             set vlans = vlans | arista.avd.list_compress %}
 {%             if port_channel_interface.switchport.trunk.native_vlan_tag is arista.avd.defined(true) %}
@@ -46,6 +45,7 @@
 {%             set mlag = port_channel_interface.mlag | arista.avd.default("-") %}
 {%             set esi = port_channel_interface.evpn_ethernet_segment.identifier | arista.avd.default("-") %}
 | {{ port_channel_interface.name }} | {{ description }} | {{ mode }} | {{ vlans }} | {{ native_vlan }} | {{ trunk_groups }} | {{ lacp_fallback_timeout }} | {{ lacp_fallback_mode }} | {{ mlag }} | {{ esi }} |
+{# TODO: AVD6.0 Below elif block should be removed once the deprecated keys are removed in AVD6.0 #}
 {%         elif port_channel_interface.type is arista.avd.defined("switched") %}
 {%             set description = port_channel_interface.description | arista.avd.default("-") %}
 {%             set mode = port_channel_interface.mode | arista.avd.default('-') %}
