--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
@@ -195,7 +195,9 @@ interface {{ ethernet_interface.name }}
 {%     for trunk_group in ethernet_interface.switchport.trunk.groups | arista.avd.natural_sort %}
    switchport trunk group {{ trunk_group }}
 {%     endfor %}
-{%     if ethernet_interface.switchport.enabled is arista.avd.defined(false) %}
+{%     if ethernet_interface.switchport.enabled is arista.avd.defined(true) %}
+   switchport
+{%     elif ethernet_interface.switchport.enabled is arista.avd.defined(false) %}
    no switchport
 {%     endif %}
 {%     if ethernet_interface.switchport.source_interface is arista.avd.defined %}
